# mulle-core

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePackage.cmake  LICENSE  README.md  RELEASENOTES.md  clib.json  mulle-core.sublime-project  mulle-create-precompiled-header.sh  package.json
.github/workflows/: cmake-errors.yml  codeql.yml  isolate-msvc-cl-crash.yml  mulle-linux-package.yml  mulle-sde-ci.yml  semgrep.yml  submodule-test.yml  test-submodule.bat  test-submodule.sh
asset/dox/: TOC.md
cmake/: Headers.cmake  InstallCMakeInclude.cmake  Sources.cmake
cmake/reflect/: _Dependencies.cmake  _Headers.cmake  _Libraries.cmake  _Sources.cmake
cmake/share/: StandaloneC.cmake
cola/: add.md.bud  config.plist  constituents.md.bud  dependencies.plist  description.md.bud  info.md.bud  info.md.bud.old  install.md.bud  properties.plist
dlfcn-win32/: dlfcn.c  dlfcn.h
mintomic/: mintomic.h  mintomic_gcc_arm64.h  platform_detect.h
mintomic/private/: mintomic_gcc_arm.h  mintomic_gcc_x86-64.h
src/: mulle-core.c  mulle-core.h
src/generic/: include-private.h  include.h
src/mulle-aba/: TOC.md  _mulle-aba-include.h  _mulle-aba-versioncheck.h  include.h  mulle-aba-storage.c  mulle-aba-storage.h  mulle-aba.c  mulle-aba.h
src/mulle-allocator/: TOC.md  _mulle-allocator-versioncheck.h  mulle-alloca.h  mulle-allocator.h
src/mulle-buffer/: TOC.md  _mulle-buffer-include.h  _mulle-buffer-versioncheck.h  include.h  mulle--buffer.h  mulle-buffer.c  mulle-buffer.h  mulle-flushablebuffer.h
src/mulle-c11/: TOC.md  mulle-c11-align.h  mulle-c11-bool.h  mulle-c11-builtin.h  mulle-c11-endian.h  mulle-c11-eval.h  mulle-c11-feature.h  mulle-c11-swap.h  mulle-c11.h
src/mulle-concurrent/: TOC.md  _mulle-concurrent-include.h  _mulle-concurrent-versioncheck.h  include.h  mulle-concurrent.h
src/mulle-container/: TOC.md  _mulle-container-include.h  _mulle-container-versioncheck.h  include.h  mulle--array.h  mulle--assoc.c  mulle--assoc.h  mulle--map.c  mulle--map.h  mulle--pointerarray.h  mulle--pointermap.h  mulle--pointerpairarray.h  mulle--pointerqueue.c  mulle--pointerqueue.h  mulle--pointerset-generic.c  mulle--pointerset-generic.h  mulle--pointerset-struct.c  mulle--pointerset-struct.h  mulle--pointerset.h  mulle--rangemap.c  mulle--rangemap.h  mulle--rangeset.h  mulle--set.h  mulle--structarray.h  mulle--structqueue.h  mulle-array.h  mulle-assoc.h  mulle-container-callback-global.h  mulle-container-callback.c  mulle-container-callback.h  mulle-container.h  mulle-map.h  mulle-pointerpair.h  mulle-pointerpairarray.h  mulle-pointerqueue.h  mulle-pointerset.h  mulle-set.h  mulle-structarray.h  mulle-structqueue.h
src/mulle-container-debug/: TOC.md  _mulle-container-debug-include-private.h  _mulle-container-debug-include.h  _mulle-container-debug-provide.h  include-private.h  include.h  mulle--array-debug.c  mulle--array-debug.h  mulle--assoc-debug.c  mulle--assoc-debug.h  mulle--map-debug.c  mulle--map-debug.h  mulle--pointerarray-debug.c  mulle--pointerarray-debug.h  mulle--pointermap-debug.h  mulle--pointermap-generic-debug.c  mulle--pointermap-generic-debug.h  mulle--pointermap-struct-debug.c  mulle--pointermap-struct-debug.h  mulle--pointerpairarray-debug.c  mulle--pointerpairarray-debug.h  mulle--pointerqueue-debug.c  mulle--pointerqueue-debug.h  mulle--pointerset-debug.h  mulle--pointerset-generic-debug.c  mulle--pointerset-generic-debug.h  mulle--pointerset-struct-debug.c  mulle--pointerset-struct-debug.h  mulle--rangeset-debug.c  mulle--rangeset-debug.h  mulle--set-debug.c  mulle--set-debug.h  mulle--structarray-debug.c  mulle--structarray-debug.h  mulle--structqueue-debug.c  mulle--structqueue-debug.h  mulle-array-debug.c  mulle-array-debug.h  mulle-assoc-debug.c  mulle-assoc-debug.h  (+20 more)
src/mulle-data/: TOC.md  _mulle-data-versioncheck.h  farmhash.c  farmhash.h  include.h  largeint.h  main.c  mulle-data.c  mulle-data.h  mulle-fnv1a.c  mulle-fnv1a.h  mulle-hash.c  mulle-hash.h  mulle-memset.h  mulle-prime.c  mulle-prime.h  mulle-qsort.c  mulle-qsort.h  mulle-range.c  mulle-range.h
src/mulle-dlfcn/: TOC.md  _mulle-dlfcn-include-private.h  _mulle-dlfcn-include.h  _mulle-dlfcn-versioncheck.h  include-private.h  include.h  mulle-dlfcn-standalone.c  mulle-dlfcn.c  mulle-dlfcn.h
src/mulle-dtostr/: TOC.md  mulle-dtostr.c  mulle-dtostr.h  pow10_table_data.inc
src/mulle-fifo/: TOC.md  _mulle-fifo-include-private.h  _mulle-fifo-include.h  _mulle-fifo-provide.h  _mulle-fifo-versioncheck.h  include-private.h  include.h  mulle--pointerfifo1024.h  mulle--pointerfifo128.h  mulle--pointerfifo16.h  mulle--pointerfifo2048.h  mulle--pointerfifo256.h  mulle--pointerfifo32.h  mulle--pointerfifo4.h  mulle--pointerfifo4096.h  mulle--pointerfifo512.h  mulle--pointerfifo64.h  mulle--pointerfifo8.h  mulle--pointerfifo8192.h  mulle-fifo.c  mulle-fifo.h  mulle-pointerfifo.h
src/mulle-fprintf/: TOC.md  _mulle-fprintf-include-private.h  _mulle-fprintf-include.h  _mulle-fprintf-provide.h  _mulle-fprintf-versioncheck.h  include-private.h  include.h  mulle-buffer-stdio.c  mulle-buffer-stdio.h  mulle-fprintf.c  mulle-fprintf.h
src/mulle-http/: TOC.md  _mulle-http-include-private.h  _mulle-http-include.h  _mulle-http-provide.h  _mulle-http-versioncheck.h  http_parser.c  http_parser.h  include-private.h  include.h  mulle-http.h
src/mulle-linkedlist/: TOC.md  _mulle-linkedlist-include.h  _mulle-linkedlist-versioncheck.h  include.h  mulle-concurrent-linkedlist.c  mulle-concurrent-linkedlist.h  mulle-linkedlist.c  mulle-linkedlist.h
src/mulle-mmap/: TOC.md  _mulle-mmap-include.h  _mulle-mmap-versioncheck.h  include-private.h  include.h  mulle-mmap-posix.c  mulle-mmap-windows.c  mulle-mmap.c  mulle-mmap.h
src/mulle-multififo/: TOC.md  _mulle-multififo-include.h  _mulle-multififo-provide.h  _mulle-multififo-versioncheck.h  include-private.h  include.h  mulle-lockingpointermultififo.c  mulle-lockingpointermultififo.h  mulle-multififo.h  mulle-pointermultififo.c  mulle-pointermultififo.h
src/mulle-rbtree-debug/: TOC.md  _mulle-rbtree-debug-include.h  _mulle-rbtree-debug-versioncheck.h  (+3 more)
test/: README.md
(+161 files in other folders)
